# rgy

./: .gitmodules  Cargo.toml  README.md
.github/: release-drafter-config.yml
.github/workflows/: main.yml  publish.yml  rust.yml
codegen/: Cargo.toml  inst.patch  inst.patched.yml  inst.yml  out.rs
codegen/fetcher/: Cargo.toml  inst.patch  inst.patched.yml  inst.yml  out.rs
codegen/fetcher/src/: fetcher.rs  format.rs  generator.rs  inst.pest  main.rs
codegen/fetcher/templates/: ops.rs  root.rs
codegen/format/: Cargo.toml
codegen/format/src/: lib.rs
codegen/generator/: Cargo.toml
codegen/src/: fetcher.rs  generator.rs  main.rs
codegen/templates/: ops.rs  root.rs
core/: Cargo.toml
core/examples/: empty.rs
core/examples/pc/: debug.rs  hardware.rs  loader.rs  main.rs
core/src/: alu.rs  cgb.rs  cpu.rs  debug.rs  device.rs  divider.rs  dma.rs  fc.rs  gpu.rs  hardware.rs  hram.rs  ic.rs  inst.rs  joypad.rs  lcd.rs  lib.rs  main.rs  mbc.rs  mmu.rs  serial.rs  sound.rs  system.rs  timer.rs  unix.rs  wram.rs
core/src/apu/: buffer.rs  clock_divider.rs  dac.rs  envelop.rs  envelope.rs  frame_sequencer.rs  length_counter.rs  mixer.rs  mod.rs  noise.rs  stream.rs  sweep.rs  timer.rs  tone.rs  util.rs  wave.rs  wave_buf.rs
core/src/clock/: clock_divider.rs  mod.rs  prescaled_timer.rs  timer.rs
core/src/unix/: debug.rs  hardware.rs  mod.rs
core/tests/: dmg_sound_01_registers.txt  dmg_sound_02_len_ctr.txt  dmg_sound_03_trigger.txt  dmg_sound_08_len_ctr_during_power.txt  dmg_sound_09_wave_read_while_on.txt  dmg_sound_10_wave_trigger_while_on.txt  dmg_sound_11_regs_after_power.txt  dmg_sound_12_wave_write_while_on.txt  test_roms.rs
core/tests/expects/: dmg_sound_04_sweep.txt  dmg_sound_05_sweep_details.txt  dmg_sound_06_overflow_on_trigger.txt  dmg_sound_07_len_sweep_period_sync.txt  dmg_sound_08_len_ctr_during_power.txt  dmg_sound_12_wave_write_while_on.txt  halt_bug.txt  interrupt_time.txt  mealybug_tearoom_m2_win_en_toggle.txt  mealybug_tearoom_m3_bgp_change.txt  mealybug_tearoom_m3_bgp_change_sprites.txt  mealybug_tearoom_m3_lcdc_bg_en_change.txt  mealybug_tearoom_m3_lcdc_bg_map_change.txt  mealybug_tearoom_m3_lcdc_obj_en_change.txt  mealybug_tearoom_m3_lcdc_obj_en_change_variant.txt  mealybug_tearoom_m3_lcdc_obj_size_change.txt  mealybug_tearoom_m3_lcdc_obj_size_change_scx.txt  mealybug_tearoom_m3_lcdc_tile_sel_change.txt  mealybug_tearoom_m3_lcdc_tile_sel_win_change.txt  mealybug_tearoom_m3_lcdc_win_en_change_multiple.txt  mealybug_tearoom_m3_lcdc_win_en_change_multiple_wx.txt  mealybug_tearoom_m3_lcdc_win_map_change.txt  mealybug_tearoom_m3_obp0_change.txt  mealybug_tearoom_m3_scx_high_5_bits.txt  mealybug_tearoom_m3_scx_low_3_bits.txt  mealybug_tearoom_m3_scy_change.txt  mealybug_tearoom_m3_window_timing.txt  mealybug_tearoom_m3_window_timing_wx_0.txt  mealybug_tearoom_m3_wx_4_change.txt  mealybug_tearoom_m3_wx_4_change_sprites.txt  mealybug_tearoom_m3_wx_5_change.txt  mealybug_tearoom_m3_wx_6_change.txt  mem_timing2.txt  same_suite_channel_1_delay.txt  same_suite_channel_1_duty_delay.txt  same_suite_channel_1_freq_change.txt  same_suite_channel_1_nrx2_speed_change.txt  same_suite_channel_1_restart.txt  same_suite_channel_1_restart_nrx2_glitch.txt  same_suite_channel_4_lfsr.txt  (+8 more)
librgboy/: Cargo.toml
librgboy/src/: cpu.rs  device.rs  fc.rs  gpu.rs  hardware.rs  inst.rs  lib.rs  mbc.rs  mmu.rs  sound.rs  system.rs
rgboy/: Cargo.toml
rgboy/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+1 files in other folders)
