[package]
name = "rgy"
version = "0.1.0"
authors = ["Yushi Omote <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["gameboy", "emulator"]
description = "No-std Rust GameBoy emulator library"
homepage = "https://github.com/yushiomote/rgy"
repository = "https://github.com/yushiomote/rgy"
documentation = "https://docs.rs/rgy"
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = { version = "1.2", features = ["spin_no_std"] }
log = "0.4"
hashbrown = "0.6"
spin = "0.5"

[dev-dependencies]
env_logger = "0.6"
rustyline = "4.1"
minifb = "0.11"
structopt = "0.2"
cpal = "0.8"
signal-hook = "0.1"
core_affinity = "0.5"

[features]
default = []
color = []
