[package]
name = "rgy"
version = "0.1.0"
authors = ["Yushi Omote <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["gameboy", "emulator"]
description = "No-std Rust GameBoy emulator library"
homepage = "https://github.com/yushiomote/rgy"
repository = "https://github.com/yushiomote/rgy"
documentation = "https://docs.rs/rgy"
license = "MIT"
readme = "../README.md"

[dependencies]
lazy_static = { version = "1.2", features = ["spin_no_std"] }
log = "0.4"
hashbrown = "0.14"
spin = "0.9"
bitfield-struct = "0.8.0"

[dev-dependencies]
env_logger = "0.11"
rustyline = "14"
minifb = "0.12"
structopt = "0.3"
cpal = "0.9"
signal-hook = "0.3"
core_affinity = "0.8"
utils = { path = "../utils" }
gilrs = "0.10.9"


[features]
default = []
